shortened some collections creations, rid of some guava usages